fix unable to run Forgix on Java 24